# CryptoExchange-Rust

./: README.md  rustproject.sql
my-app/src/app/: app.component.html  app.module.ts
my-app/src/app/bitcoin-price/: bitcoin-price.component.css  bitcoin-price.component.html  bitcoin-price.component.spec.ts  bitcoin-price.component.ts
rust/web/: .env  Cargo.toml  ERD.txt
rust/web/migrations/2023-04-03-105635_user_details/: down.sql  up.sql
rust/web/migrations/2023-04-30-211139_create_wallets/: down.sql  up.sql
rust/web/migrations/2023-05-01-012331_cryptocurrency/: down.sql  up.sql
rust/web/migrations/2023-05-01-015547_real_money_wallet/: down.sql  up.sql
rust/web/migrations/2023-05-04-181516_Transaction/: up.sql
rust/web/migrations/2023-05-04-185953_Order/: up.sql
rust/web/migrations/2023-05-04-191803_Trade/: down.sql  up.sql
rust/web/src/: filter.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs
