[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
rocket_contrib = "0.4.4"
async-stripe = { version = "0.22.2", features = ["runtime-tokio-hyper"]}
jsonwebtoken = "7.1.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]

features = ["handlebars"]

